hphp/test/slow/traits/requireclass/requireclass_abstract_01.bad.php.expectf
Fatal error: Non final class 'C' uses trait 'T', but trait 'T' may only be used from class 'C', which must be final in %s/requireclass_abstract_01.bad.php on line 6
